# tanmatsu-coprocessor-test

./: .clangd  .gitignore  Makefile  README.md  env  partitions.csv  sdkconfig
main/: CMakeLists.txt  bsp_lvgl.c  bsp_lvgl.h  idf_component.yml  keyboard.cpp  keyboard.hpp  main.c  main.cpp
main/ui/: appwindow.slint
